--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -1630,11 +1630,14 @@ ol.lowerroman {
 	position: relative;
 }
 
+.moveup-100 {
+	position: relative;
+	top: -100px;
+}
 .moveup-70 {
 	position: relative;
 	top: -70px;
 }
-
 .moveup-18 {
 	position: relative;
 	top: -18px;
