--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -933,12 +933,7 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 	}
 
 	code {
-		background-clip: padding-box;
-		border-radius: 3px 3px 3px 3px;
-		padding: 0 5px 2px;
-		overflow:auto;
-		white-space:pre-wrap;
-		word-wrap: normal;
+		font-family: 'Courier New', Courier, monospace;
 	}
 
 	img {
