--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -1297,6 +1297,9 @@ h1, h2, h3, h4, h5, h6 {
 	.max-width-460 {
 		max-width: 460px;
 	}
+	.max-width-800 {
+		max-width: 800px;
+	}
 }
 .max-height-100 {
 	max-height: 100px;
