--- a/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
@@ -9,8 +9,8 @@
 	<g:HTMLPanel>
 		<bh:Div>
 			<b:Row>
-			    <b:Column size="LG_6">
-			    	<bh:Div ui:field="editProfilePanel" addStyleNames="highlight-box">
+				<b:Column size="LG_6">
+					<bh:Div ui:field="editProfilePanel" addStyleNames="highlight-box">
 						<b:Button ui:field="editProfileButton" icon="EDIT" >Edit Profile</b:Button>
 					</bh:Div>
 					<bh:Div ui:field="dateTimeFormatPanel" addStyleNames="highlight-box">
@@ -22,51 +22,86 @@
 							</b:DropDownMenu>
 						</b:ButtonGroup>
 					</bh:Div>
-			    </b:Column>
-   			    <b:Column size="LG_6">
-   			    	<bh:Div ui:field="changeSynapsePasswordUI">
-					    <bh:Div ui:field="changeSynapsePasswordHighlightBox" addStyleNames="highlight-box margin-bottom-20" >
-					        <bh:Div addStyleNames="form-horizontal">
-					            <b:Row ui:field="currentPassword" addStyleNames="form-group">
-					                <b:Column size="SM_3" addStyleNames="control-label boldText">
-					                    <bh:Text>Current password</bh:Text>
-					                </b:Column>
-					                <b:Column size="SM_8">
-				                    	<g:PasswordTextBox ui:field="currentPasswordField" addStyleNames="form-control"/>
-					                </b:Column>
-					            </b:Row>
-					            <b:Row ui:field="password1" addStyleNames="form-group">
-					                <b:Column size="SM_3" addStyleNames="control-label boldText">
-					                    <bh:Text>New password</bh:Text>
-					                </b:Column>
-					                <b:Column size="SM_8">
-								    	<g:PasswordTextBox ui:field="password1Field" styleName="form-control"/>
-								    	<bh:Div ui:field="passwordStrengthContainer"/>
-					                </b:Column>
-					            </b:Row>
-					            <b:Row ui:field="password2" addStyleNames="form-group">
-					                <b:Column size="SM_3" addStyleNames="control-label boldText">
-					                    <bh:Text>Confirm password</bh:Text>
-					                </b:Column>
-					                <b:Column size="SM_8">
-								    	<g:PasswordTextBox ui:field="password2Field" styleName="form-control"/>
-					                </b:Column>
-					            </b:Row>
-								<b:Row>
-								    <b:Column size="SM_12">
-								        <b:Button ui:field="changePasswordBtn" addStyleNames="margin-top-10 margin-bottom-10" text="Change Password"/>
-								 		<g:FlowPanel ui:field="forgotPasswordContainer"/>
-								    </b:Column>
+					<bh:Div ui:field="profileValidationUI" addStyleNames="highlight-box">
+						<bh:Div addStyleNames="margin-top-5 margin-bottom-5">
+							<bh:Div>
+								<b:Button ui:field="verificationSubmittedButton" type="PRIMARY" size="SMALL" addStyleNames="margin-right-5">Profile Validation Pending</b:Button>
+								<b:Button ui:field="verificationRejectedButton" type="WARNING" size="SMALL" addStyleNames="margin-right-5">Profile Validation Rejected</b:Button>
+								<b:Button ui:field="verificationSuspendedButton" type="WARNING" size="SMALL" addStyleNames="margin-right-5">Validated Profile Suspended</b:Button>
+								<b:Button ui:field="resubmitProfileValidationButton" type="PRIMARY" size="SMALL" addStyleNames="margin-right-5">Revalidate My Profile</b:Button>
+								<b:Button ui:field="verificationApprovedButton" type="DEFAULT" size="SMALL" addStyleNames="margin-right-5">Profile Validation Details</b:Button>
+							</bh:Div>
+						</bh:Div>
+
+						<bh:Div ui:field="verifyAlert">
+							<b:Heading size="H5" addStyleNames="boldText" text="Profile validation" />
+							<bh:Paragraph>
+								<bh:Text>Certified users with a validated profile can access more features and data.</bh:Text>
+								<b:Anchor ui:field="requestProfileValidationLink1" text="Validate your profile today!"/>
+							</bh:Paragraph>
+							<bh:Paragraph>
+								<bh:OrderedList>
+									<b:ListItem>
+										<b:Anchor ui:field="reviewProfileLink" text="Review and complete your profile."/>
+									</b:ListItem>
+									<b:ListItem>
+										<b:Anchor ui:field="createOrcIdLink" text="Create/populate a public ORCID profile or link to your existing one."/>
+									</b:ListItem>
+									<b:ListItem>
+										<b:Anchor ui:field="requestProfileValidationLink2" text="Request profile validation."/>
+									</b:ListItem>
+								</bh:OrderedList>
+							</bh:Paragraph>
+						</bh:Div>
+						<w:HelpWidget helpMarkdown="A Synapse Qualified Researcher is a Certified User with a validated user profile.&#10;Synapse Qualified Researchers are eligible to request access to Bridge data."
+							text="More info..." href="http://docs.synapse.org/articles/accounts_certified_users_and_profile_validation.html#validated-profile"
+							iconStyles="color-white" addMoreInfoStyleNames="color-white" />
+					</bh:Div>
+				</b:Column>
+				<b:Column size="LG_6">
+					<bh:Div ui:field="changeSynapsePasswordUI">
+						<bh:Div ui:field="changeSynapsePasswordHighlightBox" addStyleNames="highlight-box margin-bottom-20" >
+							<bh:Div addStyleNames="form-horizontal">
+								<b:Row ui:field="currentPassword" addStyleNames="form-group">
+									<b:Column size="SM_3" addStyleNames="control-label boldText">
+										<bh:Text>Current password</bh:Text>
+									</b:Column>
+									<b:Column size="SM_8">
+										<g:PasswordTextBox ui:field="currentPasswordField" addStyleNames="form-control"/>
+									</b:Column>
+								</b:Row>
+								<b:Row ui:field="password1" addStyleNames="form-group">
+									<b:Column size="SM_3" addStyleNames="control-label boldText">
+										<bh:Text>New password</bh:Text>
+									</b:Column>
+									<b:Column size="SM_8">
+										<g:PasswordTextBox ui:field="password1Field" styleName="form-control"/>
+										<bh:Div ui:field="passwordStrengthContainer"/>
+									</b:Column>
+								</b:Row>
+								<b:Row ui:field="password2" addStyleNames="form-group">
+									<b:Column size="SM_3" addStyleNames="control-label boldText">
+										<bh:Text>Confirm password</bh:Text>
+									</b:Column>
+									<b:Column size="SM_8">
+										<g:PasswordTextBox ui:field="password2Field" styleName="form-control"/>
+									</b:Column>
 								</b:Row>
 								<b:Row>
-								    <b:Column size="SM_12">
-								        <g:SimplePanel ui:field="passwordSynAlertPanel"/>
-								    </b:Column>
+									<b:Column size="SM_12">
+										<b:Button ui:field="changePasswordBtn" addStyleNames="margin-top-10 margin-bottom-10" text="Change Password"/>
+								 		<g:FlowPanel ui:field="forgotPasswordContainer"/>
+									</b:Column>
+								</b:Row>
+								<b:Row>
+									<b:Column size="SM_12">
+										<g:SimplePanel ui:field="passwordSynAlertPanel"/>
+									</b:Column>
 								</b:Row>
 							</bh:Div>
 						</bh:Div>
 					</bh:Div>	
-			    </b:Column>
+				</b:Column>
 			</b:Row>
 			<bh:Div ui:field="emailSettingsPanel" addStyleNames="highlight-box margin-bottom-15">
 				<bh:Div ui:field="emailsPanel" />
@@ -76,13 +111,13 @@
 				<g:SimplePanel ui:field="notificationSynAlertPanel" />
 			</bh:Div>
 			<g:FlowPanel addStyleNames="light-border padding-10 margin-bottom-15">
-	    		<bh:Div addStyleNames="highlight-title">
-	    			<bh:Text>Following</bh:Text>
-	    			<w:HelpWidget helpMarkdown="These are discussion threads and forums that you have been subscribed to which means you will receive an email when someone responds or creates a thread." 
+				<bh:Div addStyleNames="highlight-title">
+					<bh:Text>Following</bh:Text>
+					<w:HelpWidget helpMarkdown="These are discussion threads and forums that you have been subscribed to which means you will receive an email when someone responds or creates a thread." 
 						href="http://docs.synapse.org/articles/discussion.html" addStyleNames="margin-left-5"/>
-	    		</bh:Div>
-	    		<bh:Div ui:field="subscriptionsContainer" />
-	    	</g:FlowPanel>
+				</bh:Div>
+				<bh:Div ui:field="subscriptionsContainer" />
+			</g:FlowPanel>
 			<g:HTMLPanel ui:field="apiKeyHighlightBox" addStyleNames="highlight-box">
 				<p>Using an API key allows you to authenticate your scripts for an
 					indefinite amount of time. It is important that you treat your API
