SWC-4403: add additional padding to markdown ol and ul, and do not rely on css file to center initial loader

--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -902,6 +902,7 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 	ol { 
 		list-style-type: decimal;
 		padding-left: 15px;
+		padding-bottom: 15px;
 		li {
 			padding-top: 5px;
 			margin-left: 10px;
@@ -910,6 +911,7 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 	ul { 
 		list-style-type: square;
 		padding-left: 17px;
+		padding-bottom: 15px;
 		li {
 			padding-top: 5px;
 			margin-left: 10px;
