--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -1,7 +1,7 @@
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder" xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:s="urn:import:org.sagebionetworks.web.client.view"
 	xmlns:b="urn:import:org.gwtbootstrap3.client.ui" xmlns:bh="urn:import:org.gwtbootstrap3.client.ui.html" xmlns:t="urn:import:org.sagebionetworks.web.client.view.bootstrap.table"
-	xmlns:v="urn:import:org.sagebionetworks.web.client.widget.verification" xmlns:w="urn:import:org.sagebionetworks.web.client.widget" xmlns:tr="urn:import:org.sagebionetworks.web.client.widget.table.v2.results">
+	xmlns:w="urn:import:org.sagebionetworks.web.client.widget" xmlns:tr="urn:import:org.sagebionetworks.web.client.widget.table.v2.results">
 
 	<ui:with field='sageImageBundle' type='org.sagebionetworks.web.client.SageImageBundle' />
 
@@ -77,26 +77,12 @@
 											<g:SimplePanel ui:field="picturePanel" styleName="margin-left-10 displayInlineBlock" height="180px" width="180px" />
 											<!-- View Profile Panel -->
 											<bh:Div ui:field="viewProfilePanel" addStyleNames="margin-bottom-10">
-												<g:Image ui:field="certificationBadge" resource='{sageImageBundle.certificate}' addStyleNames="displayInline imageButton margin-top-10 vertical-align-top moveup-8 margin-right-10"
-													height="32px" width="25px" />
 												<b:Heading ui:field="displayNameField" addStyleNames="displayInline" size="H2" />
 												<b:Heading ui:field="headlineField" size="H4" />
-												<bh:Div addStyleNames="margin-top-5 margin-bottom-5">
-													<b:Button ui:field="verifiedBadge" addStyleNames="margin-right-5" icon="CHECK_SQUARE_O" type="PRIMARY" size="SMALL">Profile Validated</b:Button>
-													<v:VerificationIDCardViewImpl ui:field="idCard" />
-												</bh:Div>
 												<bh:Paragraph ui:field="industryLocationField" addStyleNames="user-profile-industry-location" />
 												<bh:Paragraph ui:field="summaryField" addStyleNames="user-profile-summary" />
 												<bh:Div>
 													<b:Anchor ui:field="urlField" target="_blank" />
-												</bh:Div>
-												<bh:Div>
-													<b:Anchor ui:field="orcIdField" target="_blank" addStyleNames="margin-right-15" />
-													<bh:Span ui:field="unbindButtonUI">
-														<b:Tooltip title="Unlink this ORC ID from your Synapse profile.">
-															<b:Icon type="TIMES" ui:field="unbindButton" addStyleNames="imageButton text-danger" />
-														</b:Tooltip>
-													</bh:Span>
 												</bh:Div>
 												<bh:Div addStyleNames="margin-top-5" ui:field="createdOnUI">
 													<bh:Text>Joined&nbsp;</bh:Text>
@@ -109,7 +95,6 @@
 												<b:Row>
 													<b:Column size="XS_12">
 														<b:Button ui:field="editProfileButton" icon="EDIT" type="PRIMARY" pull="RIGHT">Edit Profile</b:Button>
-														<b:Button ui:field="linkORCIDButton" pull="RIGHT" addStyleNames="margin-right-10">Link to ORCID</b:Button>
 													</b:Column>
 												</b:Row>
 											</b:Container>
