--- a/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
@@ -22,19 +22,12 @@
 							</b:DropDownMenu>
 						</b:ButtonGroup>
 					</bh:Div>
-					<bh:Div ui:field="orcIdUI" addStyleNames="highlight-box">
-						<b:Heading size="H5" addStyleNames="boldText" text="ORCID" />
-						<b:Button ui:field="linkORCIDButton" pull="RIGHT" addStyleNames="margin-right-10">Link to ORCID</b:Button>
-						<b:Anchor ui:field="orcIdField" target="_blank" addStyleNames="margin-right-15" />
-						<bh:Span ui:field="unbindButtonUI">
-							<b:Tooltip title="Unlink this ORC ID from your Synapse profile.">
-								<b:Icon type="TIMES" ui:field="unbindButton" addStyleNames="imageButton text-danger" />
-							</b:Tooltip>
-						</bh:Span>
-					</bh:Div>
-					<bh:Div ui:field="profileValidationUI" addStyleNames="highlight-box">
-						<bh:Div addStyleNames="margin-top-5 margin-bottom-5">
-							<bh:Div>
+					<bh:Div ui:field="profileValidationUI" addStyleNames="light-border" marginTop="10">
+						<bh:Div addStyleNames="highlight-title">
+			    			<bh:Text>Profile Validation</bh:Text>
+			    		</bh:Div>
+						<bh:Div>
+							<bh:Div marginLeft="10" marginRight="10" marginTop="10" marginBottom="10">
 								<b:Button ui:field="verificationSubmittedButton" type="PRIMARY" size="SMALL" addStyleNames="margin-right-5">Profile Validation Pending</b:Button>
 								<b:Button ui:field="verificationRejectedButton" type="WARNING" size="SMALL" addStyleNames="margin-right-5">Profile Validation Rejected</b:Button>
 								<b:Button ui:field="verificationSuspendedButton" type="WARNING" size="SMALL" addStyleNames="margin-right-5">Validated Profile Suspended</b:Button>
@@ -43,33 +36,33 @@
 							</bh:Div>
 						</bh:Div>
 						<bh:Div ui:field="verifyAlert">
-							<b:Heading size="H5" addStyleNames="boldText" text="Profile validation" />
-							<bh:Paragraph>
-								<bh:Text>Certified users with a validated profile can access more features and data.</bh:Text>
-								<b:Anchor ui:field="requestProfileValidationLink1" text="Validate your profile today!"/>
-							</bh:Paragraph>
-							<bh:Paragraph>
-								<bh:OrderedList>
-									<b:ListItem>
-										<b:Anchor ui:field="reviewProfileLink" text="Review and complete your profile."/>
-									</b:ListItem>
-									<b:ListItem>
-										<b:Anchor ui:field="createOrcIdLink" text="Create/populate a public ORCID profile or link to your existing one."/>
-									</b:ListItem>
-									<b:ListItem>
-										<b:Anchor ui:field="requestProfileValidationLink2" text="Request profile validation."/>
-									</b:ListItem>
-								</bh:OrderedList>
-							</bh:Paragraph>
+							<bh:Div marginLeft="10" marginRight="10" marginTop="10" marginBottom="10">
+								<bh:Paragraph>
+									<bh:Text>Certified users with a validated profile can access more features and data.</bh:Text>
+									<b:Anchor ui:field="requestProfileValidationLink1" text="Validate your profile today!"/>
+								</bh:Paragraph>
+								<bh:Paragraph>
+									<bh:OrderedList>
+										<b:ListItem>
+											<b:Anchor ui:field="reviewProfileLink" text="Review and complete your profile."/>
+										</b:ListItem>
+										<b:ListItem>
+											<b:Anchor ui:field="createOrcIdLink" text="Create/populate a public ORCID profile or link to your existing one."/>
+										</b:ListItem>
+										<b:ListItem>
+											<b:Anchor ui:field="requestProfileValidationLink2" text="Request profile validation."/>
+										</b:ListItem>
+									</bh:OrderedList>
+								</bh:Paragraph>
+							</bh:Div>
 						</bh:Div>
 						<w:HelpWidget helpMarkdown="A Synapse Qualified Researcher is a Certified User with a validated user profile.&#10;Synapse Qualified Researchers are eligible to request access to Bridge data."
-							text="More info..." href="http://docs.synapse.org/articles/accounts_certified_users_and_profile_validation.html#validated-profile"
-							iconStyles="color-white" addMoreInfoStyleNames="color-white" />
+							text="More info..." href="http://docs.synapse.org/articles/accounts_certified_users_and_profile_validation.html#validated-profile"/>
 					</bh:Div>
 				</b:Column>
 				<b:Column size="LG_6">
 					<bh:Div ui:field="changeSynapsePasswordUI">
-						<bh:Div ui:field="changeSynapsePasswordHighlightBox" addStyleNames="highlight-box margin-bottom-20" >
+						<bh:Div ui:field="changeSynapsePasswordHighlightBox" addStyleNames="highlight-box" >
 							<bh:Div addStyleNames="form-horizontal">
 								<b:Row ui:field="currentPassword" addStyleNames="form-group">
 									<b:Column size="SM_3" addStyleNames="control-label boldText">
@@ -109,7 +102,21 @@
 								</b:Row>
 							</bh:Div>
 						</bh:Div>
-					</bh:Div>	
+					</bh:Div>
+					<bh:Div ui:field="orcIdUI" addStyleNames="light-border" marginTop="10" marginBottom="10">
+						<bh:Div addStyleNames="highlight-title">
+			    			<bh:Text>ORCID</bh:Text>
+			    		</bh:Div>
+			    		<bh:Div marginLeft="10" marginRight="10" marginTop="10" marginBottom="10">
+				    		<b:Button ui:field="linkORCIDButton" addStyleNames="margin-right-10">Link to ORCID</b:Button>
+							<b:Anchor ui:field="orcIdField" target="_blank" addStyleNames="margin-right-15" />
+							<bh:Span ui:field="unbindButtonUI">
+								<b:Tooltip title="Unlink this ORC ID from your Synapse profile.">
+									<b:Icon type="TIMES" ui:field="unbindButton" addStyleNames="imageButton text-danger" />
+								</b:Tooltip>
+							</bh:Span>
+			    		</bh:Div>
+					</bh:Div>
 				</b:Column>
 			</b:Row>
 			<bh:Div ui:field="emailSettingsPanel" addStyleNames="highlight-box margin-bottom-15">
