--- a/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
@@ -22,6 +22,18 @@
 							</b:DropDownMenu>
 						</b:ButtonGroup>
 					</bh:Div>
+					<bh:Div ui:field="certificationUI" addStyleNames="light-border" marginTop="10" visible="false">
+						<bh:Div addStyleNames="highlight-title">
+			    			<bh:Text>Certification</bh:Text>
+			    		</bh:Div>
+			    		<bh:Div>
+							<bh:Div marginLeft="10" marginRight="10" marginTop="10" marginBottom="10">
+								<b:Button ui:field="certificationButton">Get Certified</b:Button>
+							</bh:Div>
+							<w:HelpWidget helpMarkdown="There are times where human data can only be shared with certain restrictions. Learn what the rules are and how to apply and comply with data privacy levels. This topic is covered during certification."
+									text="More info..." href="https://docs.synapse.org/articles/accounts_certified_users_and_profile_validation.html#certified-users"/>
+						</bh:Div>
+					</bh:Div>
 					<bh:Div ui:field="profileValidationUI" addStyleNames="light-border" marginTop="10">
 						<bh:Div addStyleNames="highlight-title">
 			    			<bh:Text>Profile Validation</bh:Text>
