--- a/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
@@ -22,13 +22,14 @@
 							</b:DropDownMenu>
 						</b:ButtonGroup>
 					</bh:Div>
-					<bh:Div ui:field="certificationUI" addStyleNames="light-border" marginTop="10" visible="false">
+					<bh:Div addStyleNames="light-border" marginTop="10">
 						<bh:Div addStyleNames="highlight-title">
 			    			<bh:Text>Certification</bh:Text>
 			    		</bh:Div>
 			    		<bh:Div>
 							<bh:Div marginLeft="10" marginRight="10" marginTop="10" marginBottom="10">
 								<b:Button ui:field="certificationButton">Get Certified</b:Button>
+								<b:Button ui:field="certificationPassedButton" type="SUCCESS" visible="false">Passed Certification Quiz</b:Button>
 							</bh:Div>
 							<w:HelpWidget helpMarkdown="There are times where human data can only be shared with certain restrictions. Learn what the rules are and how to apply and comply with data privacy levels. This topic is covered during certification."
 									text="More info..." href="https://docs.synapse.org/articles/accounts_certified_users_and_profile_validation.html#certified-users"/>
@@ -40,11 +41,11 @@
 			    		</bh:Div>
 						<bh:Div>
 							<bh:Div marginLeft="10" marginRight="10" marginTop="10" marginBottom="10">
-								<b:Button ui:field="verificationSubmittedButton" type="PRIMARY" size="SMALL" addStyleNames="margin-right-5">Profile Validation Pending</b:Button>
-								<b:Button ui:field="verificationRejectedButton" type="WARNING" size="SMALL" addStyleNames="margin-right-5">Profile Validation Rejected</b:Button>
-								<b:Button ui:field="verificationSuspendedButton" type="WARNING" size="SMALL" addStyleNames="margin-right-5">Validated Profile Suspended</b:Button>
-								<b:Button ui:field="resubmitProfileValidationButton" type="PRIMARY" size="SMALL" addStyleNames="margin-right-5">Revalidate My Profile</b:Button>
-								<b:Button ui:field="verificationApprovedButton" type="SUCCESS" size="SMALL" addStyleNames="margin-right-5">Profile Validated</b:Button>
+								<b:Button ui:field="verificationSubmittedButton" type="PRIMARY" addStyleNames="margin-right-5">Profile Validation Pending</b:Button>
+								<b:Button ui:field="verificationRejectedButton" type="WARNING" addStyleNames="margin-right-5">Profile Validation Rejected</b:Button>
+								<b:Button ui:field="verificationSuspendedButton" type="WARNING" addStyleNames="margin-right-5">Validated Profile Suspended</b:Button>
+								<b:Button ui:field="resubmitProfileValidationButton" type="PRIMARY" addStyleNames="margin-right-5">Revalidate My Profile</b:Button>
+								<b:Button ui:field="verificationApprovedButton" type="SUCCESS" addStyleNames="margin-right-5">Profile Validated</b:Button>
 							</bh:Div>
 						</bh:Div>
 						<bh:Div ui:field="verifyAlert">
