SWC-4703: do not control dropdown menu visibility based on focus state, change to click to open

--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -2673,7 +2673,7 @@ div.border {
 		border-radius: 50%;
 		background: white;
 	}
-	.dropdown:hover ul.dropdown-menu {
+	.dropdown:focus ul.dropdown-menu {
 		display: block;
 	}
 	.dropdown ul.dropdown-menu {
@@ -2683,7 +2683,10 @@ div.border {
 	a.menu:after, .dropdown-toggle:after {
 		content: none;
 	}
-	.dropdown:hover {
+	.dropdown.open {
+		background-color: $synapse-green;
+	}
+	.greenBackgroundOnHover:hover {
 		background-color: $synapse-green;
 	}
 	.dropdown {
