--- a/src/main/resources/org/sagebionetworks/web/client/view/QuizViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/QuizViewImpl.ui.xml
@@ -12,28 +12,19 @@
     	<div class="container margin-top-10"> 
     	    <w:LoadingSpinner ui:field="loadingUI" addStyleNames="center-block center margin-150" size="60px"/>
     	    <g:SimplePanel ui:field="successContainer" visible="false">	</g:SimplePanel>
-    	    <div ui:field="quizSuccessUI" style="display:none" class="row">
-				<div class="col-sm-offset-1 col-sm-10 margin-top-10">
-				    <div class="panel panel-success">
-					      <div class="panel-heading">
-							<b:Heading size="H3" addStyleNames="panel-title" text="Quiz passed"></b:Heading>
-					      </div>
-					      <b:Heading size="H4" ui:field="successScoreContainer" addStyleNames="margin-10"></b:Heading>
-					</div>
-    			</div>
+    	    <div ui:field="quizSuccessUI" style="display:none">
+    			<b:Heading size="H4" ui:field="successScoreContainer" />
 			</div>
-			<div ui:field="quizFailureUI" style="display:none" class="row">
-				<div class="col-sm-offset-1 col-sm-10 margin-top-15">
-				    <div class="panel panel-danger">
-					      <div class="panel-heading">
-							<b:Heading size="H3" addStyleNames="panel-title" text="Quiz failed"></b:Heading>
-					      </div>
-					      <b:Heading size="H4" ui:field="failureScoreContainer" addStyleNames="margin-10"></b:Heading>
-					      <div class="margin-10">
-								<p>Please review the items shown in red below, and <g:Anchor ui:field="tryAgainLink" styleName="link" text="try again"/>.</p>
-					      </div>
-					</div>
-    			</div>
+			<div ui:field="quizFailureUI" style="display:none">
+			    <div class="panel panel-danger">
+				      <div class="panel-heading">
+						<b:Heading size="H3" addStyleNames="panel-title" text="Quiz failed"></b:Heading>
+				      </div>
+				      <b:Heading size="H4" ui:field="failureScoreContainer" addStyleNames="margin-10"></b:Heading>
+				      <div class="margin-10">
+							<p>Please review the items shown in red below, and <g:Anchor ui:field="tryAgainLink" styleName="link" text="try again"/>.</p>
+				      </div>
+				</div>
 			</div>
 			<g:HTMLPanel ui:field="quizContainer" visible="false">
 			    <div class="highlight-box padding-top-15-imp">
