--- a/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/LoginViewImpl.ui.xml
@@ -28,8 +28,8 @@
 				</g:HTMLPanel>
 				<w:LoadingSpinner ui:field="loadingUi" visible="false" size="31px" addStyleNames="moveup-2 margin-150 center center-block"/>
 				<b:Heading ui:field="loadingUiText" size="H4" text="Logging you in..." addStyleNames="displayInline center center-block margin-left-5"/>
-
 				<bh:Div ui:field="termsOfServiceView" visible="false" addStyleNames="max-width-800 center-in-div">
+					<w:InfoAlert ui:field="acceptedTermsOfUse" alertType="SUCCESS" icon="CHECK_SQUARE" linkText="You've accepted the Terms and Conditions for Use" linkTarget="_blank" linkHref="https://s3.amazonaws.com/static.synapse.org/governance/SageBionetworksSynapseTermsandConditionsofUse.pdf?v=5" visible="false" />
 					<bh:Div addStyleNames="light-border padding-10">
 						<bh:Div addStyleNames="highlight-title">
 							<bh:Text>Awareness and Ethics Pledge</bh:Text>
