--- a/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
@@ -131,11 +131,11 @@
 					</bh:Div>
 				<bh:Div addStyleNames="light-border" marginTop="10">
 						<bh:Div addStyleNames="highlight-title">
-						<bh:Text>Synapse Terms of Conditions for Use</bh:Text>
+						<bh:Text>Synapse Terms and Conditions for Use</bh:Text>
 					</bh:Div>
 					<bh:Div>
 							<bh:Div marginLeft="10" marginRight="10" marginTop="10" marginBottom="10">
-								<b:Button ui:field="synapseTermsAcceptedButton" type="SUCCESS">Accepted Terms</b:Button>
+								<b:Button ui:field="synapseTermsAcceptedButton" type="SUCCESS">Accepted Terms and Conditions for Use</b:Button>
 							</bh:Div>
 						</bh:Div>
 					</bh:Div>
