change background color of entity search menu items on hover

--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -2755,6 +2755,10 @@ div.border {
 		padding: 0 10px 30px 15px;
 		margin-top: -8px;
 	}
+	.entity-search-menu-item:focus, .entity-search-menu-item:hover {
+		background-color: $synapse-green;
+		color: white;
+	}
 }
 #rootPanel {
 	summary { color:$synapse-blue; }
