--- a/src/main/webapp/js/SRC/synapse-react-client.production.styles.css
+++ b/src/main/webapp/js/SRC/synapse-react-client.production.styles.css
@@ -1,150 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:400,700,900");
-.SRC-font-size-base {
-  font-size: 14px; }
-
-.SRC-portalCard {
-  display: block;
-  color: #1A1C29;
-  font-family: 'Lato', sans-serif;
-  font-size: 14px;
-  line-height: 21px;
-  border: 1px solid #DDDDDF;
-  margin-top: 30px;
-  margin-bottom: 30px; }
-
-.SRC-portalCard a {
-  color: #C94281; }
-
-.SRC-portalCard h3 {
-  margin: 21px, 0, 10.5px, 0 !important;
-  padding: 0; }
-
-.SRC-portalCard h3 a {
-  margin: 0;
-  font-size: 18px !important;
-  font-weight: 700; }
-
-.SRC-portalCard .SRC-type, .SRC-portalCard .SRC-cardThumbnail {
-  text-transform: uppercase;
-  color: #898989; }
-
-.SRC-portalCard .SRC-cardThumbnail {
-  display: inline-block;
-  width: 15%;
-  vertical-align: top;
-  padding-top: 21px; }
-
-.SRC-portalCard .SRC-cardThumbnail img {
-  vertical-align: top;
-  width: 50%;
-  margin: auto;
-  display: block; }
-
-.SRC-portalCard .SRC-cardThumbnail img.iconImg {
-  max-width: 75px; }
-
-.SRC-portalCard .SRC-cardThumbnail > div {
-  margin-top: 10.5px;
-  text-align: center; }
-
-.SRC-portalCard .SRC-cardContent {
-  max-width: 80%;
-  display: inline-block;
-  padding-top: 21px; }
-
-.SRC-portalCard .SRC-cardContent .SRC-author {
-  font-style: italic;
-  padding-bottom: 10.5px; }
-
-.SRC-portalCard .SRC-cardContent .SRC-cardAnnotations {
-  margin: 10.5px 0; }
-
-.SRC-portalCard .SRC-cardContent .SRC-cardAnnotations span {
-  background: #3C4A63;
-  color: white;
-  display: inline-block;
-  padding: 2px 15px 4px 15px;
-  margin: 0 10px 5px 0;
-  border-radius: 15px; }
-
-.SRC-portalCard .SRC-cardAction {
-  display: inline-block; }
-
-.SRC-portalCard .SRC-cardAction button {
-  background-color: #C94281;
-  font-size: 16px;
-  color: white;
-  display: inline-block;
-  height: 40px;
-  margin-right: 10px;
-  border-radius: 20px;
-  padding: 5px 20px !important; }
-
-.SRC-portalCard .SRC-cardMetadata {
-  display: block;
-  background-color: #F9F9F9;
-  margin-top: 21px;
-  padding: 21px 21px 21px 15%; }
-
-.SRC-portalCard .SRC-cardMetadata .row {
-  margin: 5px !important; }
-
-.SRC-portalCard .SRC-cardMetadata .row > * {
-  min-width: 100px; }
-
-.SRC-portalCard .SRC-cardMetadata .row.extraWide > * {
-  min-width: 150px; }
-
-.SRC-portalCard .SRC-cardMetadata .SRC-row-label {
-  display: inline-block;
-  color: #898989;
-  text-transform: uppercase; }
-
-.SRC-portalCard .SRC-cardMetadata .SRC-row-data {
-  display: inline-block;
-  padding-left: 21px; }
-
-.SRC-portalCard .SRC-cardMetadata .SRC-row-data a {
-  font-size: 14px !important; }
-
-.SRC-portalCard.SRC-typeDataset .row {
-  display: inline-block; }
-
-.SRC-portalCard.SRC-typeDataset .row > * {
-  min-width: 0; }
-
-.SRC-portalCard.SRC-typeDataset .SRC-row-data {
-  padding-right: 42px; }
-
-.SRC-portalCard.SRC-typeDataset .SRC-cardAction {
-  margin-left: 15%; }
-
-.SRC-portalCard.SRC-typeFunder .SRC-cardThumbnail {
-  display: inline;
-  float: right; }
-
-.SRC-portalCard.SRC-typeFunder .SRC-cardThumbnail img {
-  width: 65%; }
-
-.SRC-portalCard.SRC-typeFunder .SRC-cardContent {
-  max-width: 100%;
-  width: 90% !important;
-  margin-left: 42px; }
-
-.SRC-portalCard.SRC-typeFunder .SRC-cardContent .SRC-website a {
-  display: inline-block;
-  font-size: 14px;
-  padding-bottom: 10.5px; }
-
-.SRC-portalCard.SRC-typeFunder .SRC-description {
-  padding-bottom: 0; }
-
-.SRC-portalCard.SRC-typeFunder .SRC-cardAction {
-  margin: 21px 0 21px 42px; }
-
-.SRC-portalCard.SRC-typeTool .SRC-cardAction {
-  margin: 21px 0 21px 15%; }
-
 .markdowntable {
   border: 1px solid #dddddd;
   border-collapse: separate;
@@ -326,9 +179,9 @@
 
 .userProfileImage {
   border-radius: 50%;
-  max-width: none;
   height: 23px;
-  width: 23px; }
+  width: 23px;
+  min-width: 23px; }
 
 /*-------------------------------------------------------*/
 /* ### Loading spinner ### */
@@ -515,20 +368,18 @@ table.SRC-paddingRight > tbody > tr > td {
   text-decoration: none; }
 
 .SRC-primary-text-color {
-  color: #D53F77; }
+  color: #2B688F; }
 
 .SRC-primary-background-color {
-  background-color: #D53F77; }
+  background-color: #2B688F; }
 
 .SRC-primary-background-color-hover:hover {
-  background-color: #D53F77; }
-
-.SRC-primary-background-color-hover:hover > svg {
-  color: white; }
-
-.SRC-primary-background-color-hover:hover.SRC-nested-color:hover * {
-  background-color: #D53F77;
-  color: white; }
+  background-color: #2B688F; }
+  .SRC-primary-background-color-hover:hover > svg {
+    color: white; }
+  .SRC-primary-background-color-hover:hover.SRC-nested-color:hover * {
+    background-color: #2B688F;
+    color: white; }
 
 .SRC-marginFifteen {
   margin-left: 15px;
@@ -600,6 +451,9 @@ button.SRC-roundBorder {
 .SRC-bar-border {
   background: #F9F9F9; }
 
+.SRC-border-bottom-only {
+  border-bottom: 1px solid #dddddf; }
+
 .SRC-bar-border-bottom {
   border-bottom: 1px solid #dddddf;
   border-left: 1px solid #dddddf;
@@ -659,6 +513,7 @@ button.SRC-roundBorder {
   padding-right: 20px; }
 
 .tableApply {
+  outline: none;
   border-radius: 17px;
   padding: 6px 25px;
   background: #4E5491;
@@ -675,9 +530,8 @@ button.SRC-roundBorder {
   font-weight: 600;
   border: none;
   background: white; }
-
-.tableDropdownSelector:focus {
-  outline: none; }
+  .tableDropdownSelector:focus {
+    outline: none; }
 
 .SRC-extraPadding {
   padding: 5px; }
@@ -703,9 +557,8 @@ button.SRC-roundBorder {
   width: 130px;
   height: 40px;
   margin: 21px; }
-
-.SRC-viewMoreButton:focus {
-  outline: none; }
+  .SRC-viewMoreButton:focus {
+    outline: none; }
 
 /*
   checkmark styling start
@@ -778,6 +631,8 @@ checkmark styling end
   font-weight: 700; }
 
 .SRC-sortPadding {
+  outline: none;
+  margin-left: 6px;
   padding: 2px 3px; }
 
 .SRC-forceLeftDropdown {
@@ -790,9 +645,8 @@ checkmark styling end
   width: 100vw;
   background: none;
   border: none; }
-
-.SRC-menu-wall:focus {
-  outline: none; }
+  .SRC-menu-wall:focus {
+    outline: none; }
 
 .SRC-table-dropdown-content {
   align-items: center;
@@ -810,6 +664,10 @@ checkmark styling end
 
 .SRC-centerContent {
   display: flex;
+  align-items: center; }
+
+.SRC-centerContentInline {
+  display: inline-flex;
   align-items: center; }
 
 .SRC-tableHeader {
@@ -836,3 +694,146 @@ checkmark styling end
   left: 150px;
   margin-right: 10px;
   margin-top: 5px; }
+
+.SRC-overflowWrap {
+  overflow-wrap: break-word; }
+
+.SRC-card-enter {
+  opacity: 0.01; }
+
+.SRC-card-enter.SRC-card-enter-active {
+  opacity: 1;
+  transition: opacity 300ms ease-in; }
+
+.SRC-card-exit {
+  opacity: 1; }
+
+.SRC-card-exit.SRC-card-exit-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in; }
+
+span.SRC-logo-cursor * {
+  cursor: wait; }
+
+div.SRC-logo-cursor * {
+  cursor: wait; }
+
+/*
+  UserCard Styling
+*/
+.SRC-userCard {
+  display: inline-flex;
+  align-items: center; }
+
+.SRC-userCardMediumUp {
+  height: 120px;
+  width: -webkit-fill-available; }
+
+.SRC-eqHeightRow {
+  height: 20px; }
+
+.SRC-cardContent {
+  display: inline-flex;
+  flex-direction: column;
+  padding-left: 17px; }
+
+.SRC-textareaCopy {
+  border: none;
+  background-color: transparent;
+  resize: none;
+  outline: none;
+  color: #337ab7;
+  cursor: pointer; }
+
+.SRC-cardMenuButton {
+  margin-left: auto;
+  margin-right: 16px; }
+
+.SRC-inlineFlex {
+  display: inline-flex;
+  align-items: center; }
+
+.SRC-copyContainer {
+  color: #337ab7;
+  cursor: pointer;
+  z-index: 2; }
+
+.SRC-cardContainer {
+  max-width: 1335px;
+  margin: 0 auto; }
+
+.SRC-card-grid-row {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start; }
+
+.SRC-grid-item {
+  height: 120px;
+  flex-basis: 31%;
+  flex-grow: 1;
+  margin: 10px 10px;
+  width: 350px;
+  position: relative;
+  box-sizing: border-box; }
+
+@media (max-width: 1333px) {
+  .SRC-grid-item {
+    flex-basis: 33.33%; } }
+
+@media (max-width: 1073px) {
+  .SRC-grid-item {
+    flex-basis: 33.33%; } }
+
+@media (max-width: 815px) {
+  .SRC-grid-item {
+    flex-basis: 50%; } }
+
+@media (max-width: 555px) {
+  .SRC-grid-item {
+    flex-basis: 100%; } }
+
+.SRC-showGrayOnHover:hover > svg {
+  color: gray; }
+
+.SRC-modal {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 3;
+  bottom: 20px;
+  margin: 0 auto;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  background: #25A2B7;
+  color: white;
+  width: 344px;
+  height: 48px;
+  border-radius: 4px; }
+
+.SRC-menuAction {
+  background: none;
+  border: none; }
+
+.SRC-break {
+  margin: 0px;
+  border: 1px solid #DCDCDC; }
+
+.SRC-menu-item {
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  color: #515359; }
+
+.SRC-contextMenuDropdown {
+  border: 1px solid #DCDCDC;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); }
+
+.SRC-card-metadata-title {
+  color: #ABABAC; }
+
+.SRC-cardMetaData {
+  padding: 10px 33px;
+  max-height: 558px;
+  overflow-y: auto; }
