--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -2825,12 +2825,16 @@ div.border {
 	}
 }
 
-#body .SRC-primary-background-color-hover:hover {
-	background: $synapse-blue !important;
-	color: white;
+#body {
+	.SRC-primary-text-color {
+		color: $synapse-blue;
+	}
+	.SRC-primary-background-color-hover:hover {
+		background: $synapse-blue !important;
+		color: white;
+	}
+	.SRC-primary-background-color, .SRC-primary-background-color-hover.SRC-nested-color:hover > * {
+		background: $synapse-blue;
+		color: white;
+	}
 }
-#body .SRC-primary-background-color-hover.SRC-nested-color:hover > * {
-	background: $synapse-blue;
-	color: white;
-}
-
