updated SRC, hide email, changed way we set picture presigned url

--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -2833,7 +2833,7 @@ div.border {
 		background: $synapse-blue !important;
 		color: white;
 	}
-	.SRC-primary-background-color, .SRC-primary-background-color-hover.SRC-nested-color:hover > * {
+	.SRC-primary-background-color, .SRC-primary-background-color-hover.SRC-nested-color:hover, .SRC-primary-background-color-hover:hover > svg  {
 		background: $synapse-blue;
 		color: white;
 	}
