--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -462,6 +462,11 @@ end sticky footer
 	border: none;
 }
 
+.dropshadow2 {
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px;
+	background: #fff;
+}
+
 /* Rounded corners */
 .rounded {
 	@include border-radius(3px);
