--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -2831,6 +2831,11 @@ div.border {
 }
 
 #body {
+	.SRC-primary-color-hover:hover * {
+    color: $synapse-blue;
+    fill: $synapse-blue;
+	}
+
 	.SRC-primary-text-color {
 		color: $synapse-blue;
 	}
