SWC-4796: create lazily create textbox for copy to clipboard action

--- a/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
@@ -12,7 +12,7 @@
 	        <b:Row>
 	            <b:Column size="MD_9">
 	                <bh:Div ui:field="teamBadgeContainer"/>
-	                <bh:Span marginLeft="85"><w:TextBoxWithCopyToClipboardWidget ui:field="synapseEmailField" width="550px"/></bh:Span>
+	                <bh:Span marginLeft="85"><w:TextBoxWithCopyToClipboardWidget ui:field="synapseEmailField"/></bh:Span>
 	            </b:Column>    
 	    		<b:Column ui:field="commandsContainer" size="MD_3">
 		    		<b:ButtonToolBar addStyleNames="pull-right">
