--- a/src/main/resources/org/sagebionetworks/web/client/view/HomeViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/HomeViewImpl.ui.xml
@@ -260,7 +260,7 @@
 										</t:TableData>
 										<t:TableData paddingRight="2">
 											<b:Heading size="H4" addStyleNames="font-weight-bolder" text="Become a Certified User!"></b:Heading>
-											<bh:Paragraph text="In partnership with our Ethics Review Board, we've updated our terms of use to ensure that users who create content in the system are informed about appropriate conduct when dealing with possibly sensitive data." />
+											<bh:Paragraph text="Synapse is a collaborative data sharing platform approved for storing data from human subjects research. This requires special care and thought. To upload files, Synapse requires you demonstrate awareness of privacy and security issues." />
 											<b:Button text="Learn more about certification" />
 										</t:TableData>
 									</t:TableRow>
