--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -77,8 +77,14 @@
 											<!-- View Profile Panel -->
 											<bh:Div ui:field="userBadgeFooter" addStyleNames="dropshadow2" marginLeft="2" marginRight="2" marginTop="0" paddingLeft="34" paddingRight="18" paddingTop="3" height="70px">
 												<bh:Div addStyleNames="border-top-1" width="100%" paddingBottom="15" />
-												<b:Anchor ui:field="orcIdLink" addStyleNames="movedown-3"/>
-												<b:Button ui:field="editProfileButton" icon="EDIT" type="PRIMARY" pull="RIGHT">Edit Profile</b:Button>
+												<bh:Div addStyleNames="flexcontainer-row">
+													<bh:Div addStyleNames="flexcontainer-column flexcontainer-column-fill-width">
+														<b:Anchor ui:field="orcIdLink" addStyleNames="movedown-3 margin-right-30" />
+													</bh:Div>
+													<bh:Div addStyleNames="flexcontainer-column">
+														<b:Button ui:field="editProfileButton" icon="EDIT" type="PRIMARY">Edit Profile</b:Button>	
+													</bh:Div>
+												</bh:Div>
 											</bh:Div>
 											<g:SimplePanel ui:field="editUserProfilePanel" />
 										</div>
