in progress (hooking up new password reset signed token place

--- a/src/main/resources/org/sagebionetworks/web/client/view/PasswordResetSignedTokenViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/PasswordResetSignedTokenViewImpl.ui.xml
@@ -7,32 +7,14 @@
 	xmlns:w="urn:import:org.sagebionetworks.web.client.widget">
 
 	<bh:Div addStyleNames="max-width-350 center-in-div form-horizontal">
-		<bh:ClearFix />
-		<b:Row ui:field="password1" addStyleNames="form-group">
-			<b:Column size="SM_3" addStyleNames="control-label boldText">
-				<bh:Text>New password</bh:Text>
-			</b:Column>
-			<b:Column size="SM_8">
-				<g:PasswordTextBox ui:field="password1Field" styleName="form-control"/>
-			</b:Column>
-		</b:Row>
-		<b:Row ui:field="password2" addStyleNames="form-group">
-			<b:Column size="SM_3" addStyleNames="control-label boldText">
-				<bh:Text>Confirm password</bh:Text>
-			</b:Column>
-			<b:Column size="SM_8">
-				<g:PasswordTextBox ui:field="password2Field" styleName="form-control"/>
-			</b:Column>
-		</b:Row>
-		<b:Row>
-			<b:Column size="SM_12">
-				<b:Button ui:field="changePasswordBtn" addStyleNames="margin-top-10 margin-bottom-10" text="Change Password"/>
-			</b:Column>
-		</b:Row>
-		<b:Row>
-			<b:Column size="SM_12">
-				<g:SimplePanel ui:field="passwordSynAlertPanel"/>
-			</b:Column>
-		</b:Row>
+		<b:Heading size="H4" subText="Set your new Synapse account password" addStyleNames="text-align-center margin-top-20"/>
+		<bh:Div>
+			<b:Input ui:field="password1Field" type="PASSWORD"  placeholder="Enter new password" addStyleNames="margin-top-20 whiteBackground" autoComplete="false"/>
+			<b:Input ui:field="password2Field" type="PASSWORD"  placeholder="Confirm new password" addStyleNames="margin-top-20 whiteBackground" autoComplete="false"/>
+			<b:Button ui:field="changePasswordBtn" size="LARGE" type="DEFAULT" text="Change Password" width="100%" marginTop="15"/>
+		</bh:Div>
+		<bh:Div>
+			<g:SimplePanel ui:field="passwordSynAlertPanel"/>
+		</bh:Div>
 	</bh:Div>
 </ui:UiBinder> 
